--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 {% block body %}
     <form action="/login" method="post">
         <input autocomplete="off" autofocus name="username" placeholder="Username" type="text">
-		<input autocomplete="off" name="password" placeholder="Password" type="text">
+		<input autocomplete="off" name="password" placeholder="Password" type="password">
         <input type="submit" value="Login">
     </form>
 {% endblock %}
