--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
 {% block body %}
     <form action="/register" method="post">
         <input autocomplete="off" autofocus name="username" placeholder="Username" type="text">
-		<input autocomplete="off" name="password" placeholder="Password" type="text">
+		<input autocomplete="off" name="password" placeholder="Password" type="password">
         <input type="submit" value="Register">
     </form>
 {% endblock %}
