--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,7 +26,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
-                    {% if session["username"] %}
+                    {% if username %}
                         <ul class="navbar-nav me-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/a">A</a></li>
                             <li class="nav-item"><a class="nav-link" href="/b">B</a></li>
