--- a/templates/favorite.html
+++ b/templates/favorite.html
@@ -1,6 +1,78 @@
 {% extends "layout.html" %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Favorite{% endblock %}
 {% block body %}
+
+    {% if username %}
+        You are logged in as {{ username }}. <a href="/logout">Log out</a>.
+    {% else %}
+        You are not logged in.
+        <a href="/login">Log in</a>.
+        <a href="/register">Register</a>.
+    {% endif %}
+
+    <div>
+        <nav>
+            <div class="nav nav-tabs" id="fav-tab" role="tablist">
+              <a class="nav-link active" id="fav-titles-tab" data-bs-toggle="tab" href="#fav-titles" role="tab" aria-controls="fav-titles" aria-selected="true">Titles</a>
+              <a class="nav-link" id="fav-persons-tab" data-bs-toggle="tab" href="#fav-persons" role="tab" aria-controls="fav-persons" aria-selected="false">Persons</a>
+            </div>
+        </nav>
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="fav-titles" role="tabpanel" aria-labelledby="home-tab">
+                <h2>Your favorite titles</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Title</th>
+                        </tr>
+                    </thead>
+                    <tbody class="favorite-titles">
+                        {% for title in likes['titles'] %}
+                            <tr>
+                                <td>
+                                    {{ title['primaryTitle'] }}
+                                </td>
+                                <td>
+                                    <button class="like" onclick="likeAction(event, {{ title['titleId'] }}, 'unlike')">
+                                        Unlike
+                                    </button>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            <div class="tab-pane fade" id="fav-persons" role="tabpanel" aria-labelledby="profile-tab">
+                <h2>Your favorite people</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                        </tr>
+                    </thead>
+                    <tbody class="favorite-names">
+                        {% for name in likes['names'] %}
+                            <tr>
+                                <td>
+                                    {{ name['primaryName'] }}
+                                </td>
+                                <td>
+                                    <button class="like" onclick="likeAction(event, {{ name['personId'] }}, 'unlike')">
+                                        Unlike
+                                    </button>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+    
+            </div>
+        </div>
+    </div>
+
+    <script>
+
+    </script>
 
 {% endblock %}
