--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     {% if username %}
                         <ul class="navbar-nav me-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/a">A</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/favorite">Fovorite</a></li>
                             <li class="nav-item"><a class="nav-link" href="/b">B</a></li>
                             <li class="nav-item"><a class="nav-link" href="/c">C</a></li>
                             <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
