--- a/templates/layout.html
+++ b/templates/layout.html
@@ -44,6 +44,7 @@
                 </div>
             </div>
         </nav>
+        <div class="alert-div"></div>
         {% block body %}
         {% endblock %}
 
