alert-div: added height 50px

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </nav>
-        <div class="alert-div"></div>
+        <div class="alert-div" style="height: 50px"></div>
         {% block body %}
         {% endblock %}
 
