--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,7 +29,8 @@
                     {% if username %}
                         <ul class="navbar-nav me-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/favorite">Favorite</a></li>
-   
+                            <li class="nav-item"><a class="nav-link" href="/recommend_collabo">Collaborative Filtering</a></li>
+                               
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/profile">{{ username }}</a></li>
