--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,13 +26,13 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
-                    {% if username %}
+                    {% if session['user_name'] %}
                         <ul class="navbar-nav me-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/favorite">Favorite</a></li>
    
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/profile">{{ username }}</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/profile">{{ session['user_name'] }}</a></li>
                             <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
                         </ul>
                     {% else %}
