Simplified table headers

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,12 @@
 
     <input class="input_query" autocomplete="off" autofocus placeholder="Query" type="text">
     <div>
-        <h2>Top titles titled with '<span class="q-input"></span>'</h2>
+        <h2>Titles</h2>
         <table>
             <thead><tr><th>Title</th></tr></thead>
             <tbody class="q-result-titles"></tbody>
         </table>
-        <h2>Top titles starred by '<span class="q-input"></span>'</h2>
+        <h2>People</h2>
         <table>
             <thead><tr><th>Title</th></tr></thead>
             <tbody class="q-result-names"></tbody>
