--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,21 @@
             <tbody class="q-result-names"></tbody>
         </table>
     </div>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">primaryName</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body"> ...</div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Like</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script type="module" src="./../static/scripts/main.mjs"></script>      
 
