--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% block body %}
 
     <input class="input_query" autocomplete="off" autofocus placeholder="Query" type="text">
-    <div>
+    <div class="q-result">
         <h2>Titles</h2>
         <table>
             <thead><tr><th>Title</th></tr></thead>
@@ -26,9 +26,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body"> ...</div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">Like</button>
-                </div>
+                <div class="modal-footer"></div>
             </div>
         </div>
     </div>
