--- a/templates/layout.html
+++ b/templates/layout.html
@@ -45,8 +45,6 @@
             </div>
         </nav>
         <div class="alert-div" style="height: 50px"></span></div>
-        {% block body %}
-        {% endblock %}
 
         {% if get_flashed_messages() %}
             <header>
@@ -64,7 +62,7 @@
         {% endif %}
 
         <main class="container-fluid py-5 text-center">
-            {% block main %}{% endblock %}
+            {% block body %}{% endblock %}
         </main>
 
         <footer class="mb-5 small text-center text-muted">
