--- a/static/styles.css
+++ b/static/styles.css
@@ -2,3 +2,12 @@
     width: 50%;
     margin: auto;
 }
+
+.body-content {
+    width: 80%;
+    margin: auto;
+}
+
+.query-table {
+    margin: auto;
+}
