--- a/templates/layout.html
+++ b/templates/layout.html
@@ -65,6 +65,20 @@
             {% block body %}{% endblock %}
         </main>
 
+            <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">primaryName</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body"> ...</div>
+                    <div class="modal-footer"></div>
+                </div>
+            </div>
+        </div>
+
         <footer class="mb-5 small text-center text-muted">
             Data provided by <a href="https://www.imdb.com/">IMDb.com</a>
         </footer>
