HTML/CSS: Center body contents

--- a/templates/recommend_collab.html
+++ b/templates/recommend_collab.html
@@ -5,10 +5,10 @@
 {% block body %}
     <h1>Recommendation</h1>
     <p>Here are some movies you might like.</p>
-    <table>
+    <table class="query-table">
         <thead>
             <tr>
-                <th>Title</th>
+                <th>Titles</th>
             </tr>
         </thead>
         <tbody class="collab-reco-titles">
@@ -21,10 +21,10 @@
         </tbody>  
     </table>
     <p>Here are some persons you might like.</p>
-    <table>
+    <table class="query-table">
         <thead>
             <tr>
-                <th>Name</th>
+                <th>People</th>
             </tr>
         </thead>
         <tbody class="collab-reco-persons">
