Integrated liking function amongst different htmls

--- a/templates/favorite.html
+++ b/templates/favorite.html
@@ -3,7 +3,7 @@
 {% block title %}Favorite{% endblock %}
 {% block body %}
 
-    <div class="body-content">
+    <div class="q-result body-content">
         <nav>
             <div class="nav nav-tabs" id="fav-tab" role="tablist">
               <a class="nav-link active" id="fav-titles-tab" data-bs-toggle="tab" href="#fav-titles" role="tab" aria-controls="fav-titles" aria-selected="true">Titles</a>
@@ -21,9 +21,7 @@
                                     {{ title['primaryTitle'] }}
                                 </td>
                                 <td>
-                                    <button class="like" onclick="likeAction(event,'{{ title['titleId'] }}', 'unlike')">
-                                        Unlike
-                                    </button>
+                                    <button class="unlike" data-id="{{ title['titleId'] }}">Unlike</button>
                                 </td>
                             </tr>
                         {% endfor %}
@@ -40,9 +38,7 @@
                                     {{ name['primaryName'] }}
                                 </td>
                                 <td>
-                                    <button class="like" onclick="likeAction(event, '{{ name['personId'] }}', 'unlike')">
-                                        Unlike
-                                    </button>
+                                    <button class="unlike" data-id="{{ name['personId'] }}">Unlike</button>
                                 </td>
                             </tr>
                         {% endfor %}
@@ -53,36 +49,6 @@
         </div>
     </div>
 
-    <script>
-        // Like button
-        async function likeAction(event, itemId, action) {
-            event.preventDefault();
-            
-            // Send request
-            let requestData = {
-                itemId: itemId,
-                action: action
-            };
-
-            // Get response
-            let response = await fetch('/like', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(requestData)
-            });
-            
-            // Update button
-            let result = await response.json();
-            if (result.status === 'Liked') {
-                event.target.textContent = 'unlike';
-                event.target.setAttribute('onclick', `likeAction(event, '${itemId}', 'unlike')`);
-            } else {
-                event.target.textContent = 'like';
-                event.target.setAttribute('onclick', `likeAction(event, '${itemId}', 'like')`);
-            }
-        }
-    </script>
+    <script type="module" src="./../static/scripts/main.mjs"></script>
 
 {% endblock %}
